@@ -166,7 +166,7 @@ public class TimedInputArc extends TAPNElement {
 			}
 			
 			if(temp != null){
-				result = IntervalOperations.unionIntervalSequences(Arrays.asList(temp), result);
+				result = IntervalOperations.unionIntervalSequences(List.of(temp), result);
 			}
 		}
 		
